--- a/CalculaLucros/.vscode/settings.json
+++ b/CalculaLucros/.vscode/settings.json
@@ -4,5 +4,6 @@
     ],
     "java.project.sourcePaths": [
         "src"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
