feat: Enhance data handling and UI in TelaPrincipal with calendar integration and improved operation management

--- a/CalculaLucros/pom.xml
+++ b/CalculaLucros/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <!-- Jdate -->
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
 </project>
